--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -126,7 +126,8 @@
     "sidebarLock": "侧边栏常驻",
     "selectAllElementsInFrame": "选择画框中的所有元素",
     "removeAllElementsFromFrame": "删除画框中的所有元素",
-    "eyeDropper": "从画布上取色"
+    "eyeDropper": "从画布上取色",
+    "handChinese": "中文手写"
   },
   "library": {
     "noItems": "尚未添加任何项目……",
